# mmr

./: .gitignore  CMakeLists.txt  text.txt
cmakeModules/: MacroBuildTestApp.cmake
code/: CMakeLists.txt
code/app/: CMakeLists.txt
code/app/serviceApp/: CAppControler.cpp  CAppControler.h  CMakeLists.txt  main.cpp
code/cmakeModules/: MacroBuildComponent.cmake  MacroBuildSharedLib.cmake  MacroBuildTestApp.cmake  MacroBuildToolPlugin.cmake  MacroUtil.cmake
code/common/: CMakeLists.txt
code/common/include/: Common.h  Common_def.h
code/common/include/libnet/base/: hlog.h
code/common/include/libnet/cppnet/: CMakeLists.txt
code/common/include/libnet/hv/: EventLoop.h  hexport.h
code/common/include/util/: CDataStream.h  CLicenseObj.h  CLockFreeStack.hpp  CMatrix.h  CThreadpool.hpp  CVarDatas.hpp  CVariant.hpp  Clogger.h  Json.h。。。  UtilCommon.h  UtilExport.h  UtilFunc.h  json - 副本.hpp。  json.hpp
code/common/source/: CMakeLists.txt
code/common/source/libnet/: CMakeLists.txt
code/common/source/libnet/event/kcp/: hkcp.c  ikcp.c
code/common/source/util/: CDataStream.cpp  CLicenseObj.cpp  CMakeLists.txt  CMatrix.cpp  CThreadpool.cpp  Clogger.cpp  Json.cpp。。。  UtilFunc.cpp
code/creo/: CMakeLists.txt
code/creo/creoCommon/: Commons.cpp  Commons.h
code/creo/creoCommon/interface/: IPTCViewWidget.h
code/creo/ptcViewDemo/: CMakeLists.txt  QtPTCViewDemo.cpp
code/creo/ptcViewWidget/: CMakeLists.txt  PTCViewWidget.cpp  PTCViewWidget.h  pviewlib.cpp  pviewlib.h
code/creo/text/: IconMessage.txt
code/protoBuf/: ReadMe.md  generate_code_all.bat  generate_one.bat
code/protoBuf/generate/mutiTest/: mutlti.pb.cc  mutlti.pb.h
code/protoBuf/generate/protoRPCTest/: base.pb.h  calc.pb.h  login.pb.h
code/protoBuf/generate/test/: Address.pb.cc  Address.pb.h  Person.pb.cc  Person.pb.h
code/protoBuf/proto/mutiTest/: mutlti.proto
code/service/: CMakeLists.txt
code/service/compnets/: CMakeLists.txt
code/service/compnets/AppController/: CCmdService.cpp  CCmdService.h  CComponentActivator.cpp  CComponentActivator.h  CMakeLists.txt
code/service/compnets/CompTest/: CHelloService.cpp  CHelloService.h  CMakeLists.txt  CTestComponent.cpp  CTestComponent.h
code/service/compnets/ComponentDemo/: CComponentActivator.cpp  CComponentActivator.h  CComponentDemo.cpp  CComponentDemo.h  CHandlerDemo.h  CHelloService.h  CMakeLists.txt
code/service/core/: CMakeLists.txt
code/service/core/include/: CCompFramework.h  CLoggerCtrl.h
code/service/core/suorce/: CCompFramework.cpp  CLoggerCtrl.cpp
code/service/interface/: ComponentExport.h  IComponent.h  IEventHandler.h
code/service/interface/iservice/: InterfaceCommon.h
code/service/interface/iservice/AppController/: ICmdService.h
code/service/interface/iservice/CompTest/: IHelloService.h
code/service/interface/iservice/ComponentDemo/: IHelloService.h
code/test/: CMakeLists.txt
code/test/CloudMeetingServer/: CMakeLists.txt  main.cpp
code/test/TCPServetTest/: CMakeLists.txt  TcpServer_test.cpp
code/test/componentTest/: CMakeLists.txt  main.cpp
code/test/datastreamTest/: CMakeLists.txt  main.cpp
code/test/jsonTest/: CMakeLists.txt  main.cpp
code/test/lockFreeDataTest/: CMakeLists.txt  main.cpp
code/test/logTest/: CMakeLists.txt  main.cpp
code/test/matrixText/: CMakeLists.txt  main.cpp
code/test/pluginTest/: CMakeLists.txt  main.cpp
code/test/protoRpcClient/: CMakeLists.txt  calc.h  protorpc_client.cpp
code/test/protoRpcServer/: CMakeLists.txt  handler.h  login.h  protorpc.c  protorpc.h  protorpc_server.cpp  router.h
code/test/protoTest/: Address.proto  CMakeLists.txt  MyTest.cpp  Mytest.h  Person.proto  main.cpp
code/test/qtQualityMng/: CMakeLists.txt  CQMTabWidget.cpp  CQMTabWidget.h  QualityManangerWidget.cpp  QualityManangerWidget.h  ReadMe.txt  main.cpp  qmResource.qrc
code/test/qtQualityMng/config/: colDef.json  history.json
code/test/qtTest/: CMakeLists.txt  main.cpp
code/test/qtTray/: CMakeLists.txt  cfileselect.cpp  cfileselect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
code/test/serialTest/: CMakeLists.txt  CharVec.cpp  CharVec.h  CustomTypeInterface.cpp  CustomTypeInterface.h  DataHeader.cpp  DataHeader.h  DataStream.cpp  DataStream.h  main.cpp
code/test/sharedMutexTest/: CMakeLists.txt  main.cpp
code/test/shared_ptrCastTest/: CMakeLists.txt  main.cpp
code/test/sqliteTest/: CMakeLists.txt  main.cpp  test.db  test.db-journal
code/test/stateMode/: CMakeLists.txt  CanRaffleState.cpp  CanRaffleState.h  DispenseOutState.cpp  DispenseOutState.h  DispenseState.cpp  DispenseState.h  NoRaffleState.cpp  NoRaffleState.h  RaffleActivity.h  State.h  main.cpp
code/test/strTest/: CMakeLists.txt  main.cpp
code/test/strTestLinux/: CMakeLists.txt  main.cpp
code/test/threadTest/: CMakeLists.txt  main.cpp
code/test/varTest/: CMakeLists.txt  main.cpp
code/tools/include/interface/: IToolBase.hpp  IToolTest.h
code/tools/include/plugins/: PluginCommon.h
code/tools/include/plugins/tooltest/: tooltest.h
code/tools/include/toolCore/: CPluginManager.h  CoreCommon.h
code/tools/source/: CMakeLists.txt
code/tools/source/plugins/: CMakeLists.txt
code/tools/source/toolCore/: CPluginManager.cpp
common/: CMakeLists.txt
common/include/: Common.h
common/include/util/: CLicenseObj.h  Clogger.h  UtilCommon.h  UtilFunc.h
common/source/util/: UtilFunc.cpp
test/pluginTest/: CMakeLists.txt  main.cpp
test/qtTest/: main.cpp
test/strTest/: CMakeLists.txt  main.cpp
test/strTestLinux/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/include/interface/: PluginInterfaceCommon.h
tools/include/plugins/tooltest/: tooltest.h
tools/include/toolCore/: CPluginManager.h  CoreCommon.h
tools/source/plugins/: CMakeLists.txt
tools/source/plugins/tooltest/: CMakeLists.txt  tooltest.cpp
tools/source/toolCore/: CMakeLists.txt  CPluginManager.cpp
